--- a/info.html
+++ b/info.html
@@ -35,12 +35,11 @@
     
                 <li><a href="index.html">Støt Radar</a>
                     <ul>
-                        <li><a href="#">Støt</a></li>
-                        <li><a href="#">Del dine minder</a></li>
-                        <li><a href="#">Konkurrencer +</a>
+                        <li><a href="stot.html">Støt</a></li>
+                        <li><a href="del.html">Del dine minder</a></li>
+                        <li><a href="vindbillet.html">Konkurrencer +</a>
                             <ul>
-                                <li><a href="#">Vind billetter</a></li>
-                                <li><a href="#">Vind en gratis drink</a></li>
+                                <li><a href="vindbillet.html">Vind billetter</a></li>
                             </ul>
                         </li>
                     </ul>
