--- a/stot.html
+++ b/stot.html
@@ -60,7 +60,7 @@
    <main>
     <section class="infog">
     <h1>Støt Radar</h1>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste inventore optio ullam quod voluptates officiis voluptatem, deserunt hic assumenda? Aliquam dolorum libero assumenda, tenetur quisquam eveniet ipsam expedita omnis accusantium?</p>
+    <p>Radar er mere end bare et spillested – det er et kulturelt fællesskab, der støtter både upcoming kunstnere og den lokale musikscene. Ved at støtte os bidrager du til at skabe en platform for autentisk musik og unikke oplevelser. Din støtte gør det muligt for os at fortsætte med at tilbyde spændende koncerter, events og et sted, hvor musikken virkelig kan leve. Støt Radar i dag og vær med til at forme fremtidens musikscene!</p>
    
 
     <section class="infographic">
