--- a/stot.html
+++ b/stot.html
@@ -70,9 +70,9 @@
     <section class="cirkler">
         <article id="circle1">
         <input type="checkbox" id="tryk1" hidden>
-        <label for="tryk1" class="open">Bliv frivillig</label>
+        <label for="tryk1" class="open">Følg os på Instagram</label>
         <section class="popup">
-            <p>Du kan melde dig som frivillig og støtte Radar!</p>
+            <p>Når du følger Radar på Instagram, er du med til at støtte vores fremtid. Din opbakning hjælper os med at nå ud til et større publikum og give upcoming kunstnere den synlighed, de fortjener. Ved at følge os, engagerer du dig i et fællesskab, der er med til at bevare Radar som et kulturelt samlingspunkt i Aarhus, hvor musikken kan blomstre. Tak for at være en del af Radars rejse og hjælpe os med at fortsætte vores arbejde for autentiske musikoplevelser!</p>
             <label for="tryk1" class="close">Luk</label>
             <input type="checkbox" id="close1" hidden>
             </section>
@@ -80,9 +80,9 @@
 
         <article id="circle2">
             <input type="checkbox" id="tryk2" hidden>
-        <label for="tryk2" class="open">Følg os på Instagram</label>
+        <label for="tryk2" class="open">Bliv frivillig</label>
         <section class="popup">
-            <p>Du kan melde dig som frivillig og støtte Radar!</p>
+            <p>Som frivillig hos Radar får du ikke kun mulighed for at være tæt på musikken, du er også med til at skabe den unikke atmosfære, vi er kendt for. Din hjælp gør det muligt for os at fortsætte med at tilbyde unikke koncerter og støtte upcoming artister. Ved at blive frivillig bidrager du direkte til at holde Radar levende og tilgængelig for både artister og publikum – og samtidig får du en uforglemmelig oplevelse!</p>
             <label for="tryk2" class="close">Luk</label>
             <input type="checkbox" id="close2" hidden>
             </section>
@@ -91,7 +91,7 @@
             <input type="checkbox" id="tryk3" hidden>
         <label for="tryk3" class="open">Donér</label>
         <section class="popup">
-            <p>Du kan melde dig som frivillig og støtte Radar!</p>
+            <p>Radar står overfor udfordringer i den nuværende økonomiske situation, og vi har brug for din støtte for at kunne fortsætte med at tilbyde autentiske musikoplevelser og støtte upcoming kunstnere. Din donation gør en stor forskel og hjælper os med at bevare Radar som et kulturelt samlingspunkt i Aarhus. Støt os i dag og vær med til at sikre, at musikken kan leve videre på Radar!</p>
             <label for="tryk3" class="close">Luk</label>
             <input type="checkbox" id="close3" hidden>
             </section>
@@ -100,7 +100,7 @@
             <input type="checkbox" id="tryk4" hidden>
             <label for="tryk4" class="open">Køb billet</label>
             <section class="popup">
-                <p>Du kan melde dig som frivillig og støtte Radar!</p>
+                <p>Når du køber en billet til en koncert på Radar, er du med til at støtte vores fremtid. Billetkøbet giver os mulighed for at fortsætte med at tilbyde en platform for upcoming kunstnere og skabe unikke musikoplevelser. Din støtte hjælper os med at bevare Radar som et kulturelt samlingspunkt, hvor musikken kan blomstre og fremtidens talenter kan få deres scene. Tak for at være en del af Radars rejse!</p>
                 <label for="tryk4" class="close">Luk</label>
                 <input type="checkbox" id="close4" hidden>
                 </section>
@@ -109,7 +109,7 @@
             <input type="checkbox" id="tryk5" hidden>
             <label for="tryk5" class="open">Del dine minder</label>
             <section class="popup">
-                <p>Du kan melde dig som frivillig og støtte Radar!</p>
+                <p>Har du været til en fantastisk koncert på Radar? Del dine oplevelser på Instagram Story, tag Radar, og vær med i lodtrækningen om 2 gratis valgfrie drikkevarer! Det er vores måde at takke dig på for at dele magiske øjeblikke med os. Så tag din Story, og måske er det dig, der vinder!</p>
                 <label for="tryk5" class="close">Luk</label>
                 <input type="checkbox" id="close5" hidden>
                 </section>
