--- a/info.html
+++ b/info.html
@@ -86,23 +86,23 @@
     <section class="info">
         <article id="person">
             <h2>Artister og program</h2>
-            <img src="info/person.png" alt="ikon1">
+            <img src="info/person.png" alt="ikon1" class="infoimg">
             <h3>Ønsker du at udforske lineuppet for 2025?</h3>
-            <p>Se hvilke artister vi præsenterer i løbet af foråret! <a href="program.html">Klik her</a></p>
+            <p>Vores program for foråret byder på et væld af genresammensætninger, hvor du kan opleve alt fra energiske live shows til intime akustiske aftener.Se hvilke artister vi præsenterer i løbet af foråret! <a href="program.html">Klik her</a></p>
             <h3>Vil du se det fulde program for foråret 2025?</h3>
-            <p>Find alle de fantastiske artister og få et overblik! <a href="kalender.html">Klik her</a></p>
+            <p>Find alle de fantastiske artister og få et overblik! Hold øje med vores kalender og vær blandt de første til at sikre dig billetter til de koncerter, du ikke vil gå glip af. Foråret på Radar bliver en oplevelse, du sent vil glemme!<a href="kalender.html">Klik her</a></p>
             <h3>Har DU en upcoming i tankerne?</h3>
-            <p>Du kan læse om vores tidligere artister, og ønske en specifik upcoming artist. <a href="oensk.html">Klik her</a></p>
+            <p>Er der en upcoming artist, du gerne vil se på vores scene? Hos Radar elsker vi at høre fra vores publikum, og vi er altid åbne for forslag! Hvis du har en artist i tankerne, som du gerne vil se optræde, så tøv ikke med at ønske dem til Radar. Måske bliver netop din anbefaling næste storslåede koncertoplevelse!. <a href="oensk.html">Klik her</a></p>
         </article>
 
         <article id="ticket">
             <h2>Køb billet</h2>
-            <img src="info/billet.png" alt="ikon2">
+            <img src="info/billet.png" alt="ikon2"class="infoimg">
             <p>Er du klar til en uforglemmelig koncertoplevelse? Sørg for at sikre dig billetter til de kommende events, før de er udsolgt! <a href="billet.html">Find dine billetter her</a> og vær en del af atmosfæren, hvor musik og fællesskab mødes. Vi glæder os til at byde dig velkommen!</p>
         </article>
         <article id="priser">
             <h2>Priser og rabat</h2>
-            <img src="info/rabat.png" alt="ikon3">
+            <img src="info/rabat.png" alt="ikon3"class="infoimg">
             <h3>Pris og studierabat</h3>
             <p>Billetpriserne kan variere afhængigt af kunstneren og eventet, men én ting er sikkert: som studerende får du rabat på alle vores koncerter! Det betyder, at du kan opleve dine yndlingsartister til en endnu bedre pris.</p>
             <h3>Vind dine billetter</h3>
@@ -111,14 +111,14 @@
 
         <article id="lokation">
             <h2>Hvor finder du Radar?</h2>
-            <img src="info/lokation.info.png" alt="ikon4" id="lokationbillede">
+            <img src="info/lokation.info.png" alt="ikon4" id="lokationbillede"class="infoimg">
             <p>Radar ligger centralt i Aarhus, tæt på byens livlige hjerte. Du finder os på [adresse], hvor vi byder dig velkommen til en unik musikoplevelse. Uanset om du kommer til fods, med cykel eller offentlige transportmidler, er vi lette at finde – kom og oplev den autentiske stemning på Radar!</p>
             <p><a href="https://maps.app.goo.gl/zyf7MbGJWTgWNu4VA">Karen Wegeners Gade 6, 8000 Aarhus</a></p>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2222.224821141153!2d10.191550577045948!3d56.15321737323513!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x464c3fed72fbd781%3A0xcc2e3a589a69875c!2sRadar!5e0!3m2!1sda!2sdk!4v1733918612119!5m2!1sda!2sdk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </article>
         <article id="garderobe">
             <h2>Hvad gør jeg med mit overtøj?</h2>
-            <img src="info/garderobe.png" alt="ikon5">
+            <img src="info/garderobe.png" alt="ikon5"class="infoimg">
             <p>For kun 15 kr. kan du opbevare dit tøj sikkert i vores garderobe under hele koncerten. Vi anbefaler, at du bruger garderoben til at opbevare overtøj og tasker, så du kan nyde musikken uden bekymringer. Husk at hente dine ejendele, når eventet er slut!</p>
         </article>
         <article id="drikkevare">
