ændring af font

--- a/program.html
+++ b/program.html
@@ -59,8 +59,8 @@
 </header>
    <main>
     <h1>Kommende events</h1>
-    <p>Radar er stedet, hvor du kan opleve en atmosfære af diversitet og rummelighed samtidig med, at vi støtter artister, der tør at eksperimenterer med musikken. Vi arbejder løbende på at skabe et program, der byder på nichegenrer, up coming kunstnere, og koncerter – alt sammen i en autentisk og personlig atmosfære. Her får du en chance for at opdage nye universer og opleve autentiske musikoplevelser på et lokalt spillested, der brænder for at bringe musikken tættere på publikum.
-        Hold dig opdateret her og på vores Instagram, hvor vi løbende afslører kommende events og spændende konkurrencer - måske er det dig, der vinder billetter til Radar!
+    <p>Radar er stedet, hvor du kan opleve en atmosfære af diversitet og rummelighed samtidig med, at vi støtter artister, der tør at eksperimenterer med musikken. Vi arbejder løbende på at skabe et program, der byder på nichegenrer, up coming kunstnere, og koncerter – alt sammen i en autentisk og personlig atmosfære. Her får du en chance for at opdage nye universer og opleve autentiske musikoplevelser på et lokalt spillested, der brænder for at bringe musikken tættere på publikum. </p>
+        <p>Hold dig opdateret her og på vores Instagram, hvor vi løbende afslører kommende events og spændende konkurrencer - måske er det dig, der vinder billetter til Radar!
         </p>
    
 
