--- a/ungskab.html
+++ b/ungskab.html
@@ -66,8 +66,8 @@
 
 
     <section class="billet">
-        <h3>KØB DINE BILLETTER</h3>
-        <h4>HER</h4>
+        <h3>KØB DINE BILLETTER <a href="billet.html">HER</a></h3>
+        
     </section>
 
     <h5>Eller følg vores instagram og deltag i vores konkurrence, hvor vi udlodder 2xbilletter til UNG-SKAB</h5>
