--- a/ungskab.html
+++ b/ungskab.html
@@ -67,12 +67,12 @@
 
     <section class="billet">
         <h3>KØB DINE BILLETTER <a href="billet.html">HER</a></h3>
-        
     </section>
 
-    <h5>Eller følg vores instagram og deltag i vores konkurrence, hvor vi udlodder 2xbilletter til UNG-SKAB</h5>
-    <article class="konkurrence">
-        <a href="https://www.instagram.com/radarlive?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">Deltag her</a><img src="program/konkurrence.png" alt="konkurrence">
+  
+     <article class="konkurrence">
+        <h5>Eller følg vores instagram og deltag i vores konkurrence, hvor vi udlodder 2xbilletter til UNG-SKAB. Deltag ved at klikke på billedet.</h5>
+        <a href="https://www.instagram.com/radarlive?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><img src="program/konkurrence.png" alt="konkurrence"></a>
     </article>
    
     <section class="spotify">
