--- a/ungskab.html
+++ b/ungskab.html
@@ -80,14 +80,12 @@
         <iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/7JfoyGGsFgGPfhgfPvpqk8?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     </section>
 
-    <section class="hvemer">
-        <h2>Hvem er UNG-SKAB</h2>
-        <p>Med optrædener på SPOT Festival, åbningen af NorthSide 2024 og en udsolgt Store Vega, er det med stor stolthed, at vi til april præsenterer UNG-SKAB. Duoen er i rivende udvikling og har allerede opnået 21.000 månedlige lyttere på Spotify – så skynd dig at sikre dine billetter, inden det er for sent!
+       <h5>Hvem er UNG-SKAB?</h5>
+        <h6>Med optrædener på SPOT Festival, åbningen af NorthSide 2024 og en udsolgt Store Vega, er det med stor stolthed, at vi til april præsenterer UNG-SKAB. Duoen er i rivende udvikling og har allerede opnået 21.000 månedlige lyttere på Spotify – så skynd dig at sikre dine billetter, inden det er for sent!
             På vores intime, lokale spillested ønsker vi at give publikum en oplevelse, hvor autenticitet og dedikation smelter sammen. Med UNG-SKAB vil du mærke musikken gribe dig, følelserne løbe frit, og kærligheden til kunsten slå gnister. De er et stærkt spejl for den unge generation, der gennem deres musik udtrykker følelser med sårbarhed og ægthed.
-            Duoen består af Clara Rose Lundberg og Eigil Bjørn Meldgaard, der med deres vidt forskellige talenter skaber musik, der både føles nutidig og anderledes. Sammen leverer de en oplevelse, du sent vil glemme.
-            Vi glæder os til at byde dig velkommen til UNG-SKAB - og vi lover, at det bliver en aften fyldt med musikalsk magi!
-            </p>
-    </section>
+            </h6><h6>Duoen består af Clara Rose Lundberg og Eigil Bjørn Meldgaard, der med deres vidt forskellige talenter skaber musik, der både føles nutidig og anderledes. Sammen leverer de en oplevelse, du sent vil glemme.
+            Vi glæder os til at byde dig velkommen til UNG-SKAB - og vi lover, at det bliver en aften fyldt med musikalsk magi!</h6>
+   
 
    
    
