--- a/ungskab.html
+++ b/ungskab.html
@@ -85,9 +85,13 @@
             På vores intime, lokale spillested ønsker vi at give publikum en oplevelse, hvor autenticitet og dedikation smelter sammen. Med UNG-SKAB vil du mærke musikken gribe dig, følelserne løbe frit, og kærligheden til kunsten slå gnister. De er et stærkt spejl for den unge generation, der gennem deres musik udtrykker følelser med sårbarhed og ægthed.
             </h6><h6>Duoen består af Clara Rose Lundberg og Eigil Bjørn Meldgaard, der med deres vidt forskellige talenter skaber musik, der både føles nutidig og anderledes. Sammen leverer de en oplevelse, du sent vil glemme.
             Vi glæder os til at byde dig velkommen til UNG-SKAB - og vi lover, at det bliver en aften fyldt med musikalsk magi!</h6>
-   
+       
+       
+            <figure class="ungskab-ns">
+                <img src="img/ungskab-billede.webp" alt="ungskab">
+                <figcaption>Foto: Rolf Meldgaard. UNG-SKAB åbner North Side 2024. </figcaption>
+            </figure>
 
-   
    
    
 </main>
