--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <section class="billede2">
    
     <p>Hos Radar brænder vi for, at støtte artister, som eksperimenter med musikken og forskellige nichegenre. Vores lokale spillested er et kulturelt samlingspunkt, hvor du kan opleve autentiske musikoplevelser i en atmosfære, der hylder diversitet, rummelighed og accept. Radar er et åbent rum, hvor både kunstnere og publikum kan være sig selv og dele deres kærlighed til musikken</p>
-        <img src="img/billede2.jpg" alt="billede">
+        <img src="img/billede2.webp" alt="billede">
     </section>
    
   
