endelig færdig med media landing

--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
                 <li><a href="#">Støt Radar</a>
                     <ul class="uli">
                         <li><a href="stot.html">Støt</a></li>
-                        <li><a href="#">Del dine minder</a></li>
-                        <li><a href="#">Konkurrencer +</a>
+                        <li><a href="del.html">Del dine minder</a></li>
+                        <li><a href="vindbillet.html">Konkurrencer</a>
                             <ul>
-                                <li><a href="#">Vind billetter</a></li>
-                                <li><a href="#">Vind en gratis drink</a></li>
+                                <li><a href="vindbillet.html">Vind billetter</a></li>
+                                
                             </ul>
                         </li>
                     </ul>
