--- a/program.html
+++ b/program.html
@@ -21,7 +21,7 @@
     
         <nav class="navbar">
             <ul>
-                    <li><a href="#">Program</a> 
+                    <li><a href="#" id="program">Program</a> 
                     <ul>
                         
                         <li><a href="program.html">Kommende events</a></li>
