html break point

--- a/ungskab.html
+++ b/ungskab.html
@@ -59,7 +59,7 @@
         </nav>
 </header>
    <main>
-   <p><a href="program.html" class="tilbage">Tilbage</a></p>
+  
    
     <section class="ungskab">
       <img src="program/billet.webp" alt="ung-skab">
@@ -67,7 +67,8 @@
 
 
     <section class="billet">
-        <h3>KØB DINE BILLETTER <a href="billet.html">HER</a></h3>
+        <h3>KØB DINE BILLETTER</h3>
+        <a href="billet.html">HER</a>
     </section>
 
   
