--- a/info.html
+++ b/info.html
@@ -31,7 +31,7 @@
                     </ul>
                 </li>
     
-                <li><a href="info.html">Information</a>
+                <li><a href="info.html" id="information">Information</a>
                 </li>
     
                 <li><a href="#">Støt Radar</a>
