--- a/stot.html
+++ b/stot.html
@@ -34,7 +34,7 @@
                 <li><a href="info.html">Information</a>
                 </li>
     
-                <li><a href="#">Støt Radar</a>
+                <li><a href="#" id="stott">Støt Radar</a>
                     <ul class="uli">
                         <li><a href="stot.html">Støt</a></li>
                         <li><a href="del.html">Del dine minder</a></li>
