update på events

--- a/program.html
+++ b/program.html
@@ -68,7 +68,7 @@
     <section class="event">
         <img src="program/baryl.webp" alt="baryl">
         <img src="program/gorgeos.webp" alt="gorgeos">
-        <a href="ungskab.html"><img src="program/ung-event.webp" alt="ung-skab"></a>
+        <a href="ungskab.html"><img src="program/ung-event.webp" alt="ung-skab">Klik på UNG-SKAB</a>
         <img src="program/iamjj.webp" alt="iamjj">
     </section>
    
