--- a/vindbillet.html
+++ b/vindbillet.html
@@ -83,11 +83,13 @@
         <iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/7JfoyGGsFgGPfhgfPvpqk8?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     </section>
 
-    
-            <figure class="ungskab-ns">
-                <img src="img/ungskab-billede.webp" alt="ungskab">
-                <figcaption>Foto: Rolf Meldgaard. UNG-SKAB åbner North Side 2024. </figcaption>
-            </figure>
+
+    <h4>Del dine minder fra Radar! Gør som vores andre gæster, læg en story på på Instagram, tag @radarlive og måske er DU den heldige, som modtager 2 valgfrie drinks, som du kan indløse næste gang du besøger Radar! Læs mere på vores instagram eller klik <a href="del.html">her</a></h4>
+    <section class="story">
+        <img src="stoet/story.webp" alt="story1">
+        <img src="stoet/story2.webp" alt="story2">
+        <img src="stoet/story3.webp" alt="story3">
+    </section>
 
    
    
