--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     
                 <li><a href="#"class="uli">Om Radar</a>
                     <ul>
-                        <li><a href="#">Vores værdier</a></li>
+                        <li><a href="historie.html">Vores værdier</a></li>
                         <li><a href="#">Kontakt</a></li>
                         <li><a href="#">Bliv frivillig</a></li>
                       
