--- a/historie.html
+++ b/historie.html
@@ -85,13 +85,13 @@
 
      <section class="vaerdier">
         <h2>A</h2>
-        <p id="stor">ccepterende</p>
+        <p id="stor">vantgarde</p>
         <p id="lille">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, cum odio ex praesentium ipsa ab corrupti eius magnam fuga maiores delectus repellendus veritatis fugiat deserunt ratione. Minus vero qui tempora?</p>
      </section>
     
      <section class="vaerdier">
         <h2>R</h2>
-        <p id="stor">espekterende</p>
+        <p id="stor">elationer</p>
         <p id="lille">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, cum odio ex praesentium ipsa ab corrupti eius magnam fuga maiores delectus repellendus veritatis fugiat deserunt ratione. Minus vero qui tempora?</p>
      </section>
     
