--- a/historie.html
+++ b/historie.html
@@ -73,13 +73,13 @@
 
     <section class="vaerdier">
         <h2>A</h2>
-        <p id="stor">utenticitet</p>
+        <p id="stor">mbitioner</p>
         <p id="lille">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, cum odio ex praesentium ipsa ab corrupti eius magnam fuga maiores delectus repellendus veritatis fugiat deserunt ratione. Minus vero qui tempora?</p>
      </section>
     
      <section class="vaerdier">
         <h2>D</h2>
-        <p id="stor">iversitet</p>
+        <p id="stor">edikation</p>
         <p id="lille">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, cum odio ex praesentium ipsa ab corrupti eius magnam fuga maiores delectus repellendus veritatis fugiat deserunt ratione. Minus vero qui tempora?</p>
      </section>
 
