redigering af css

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <h1>Velkommen til Radar</h1>
     <section class="billede2">
    
-    <p>Hos Radar brænder vi for, at støtte artister, som eksperimenter med musikken og forskellige nichegenre. Vores lokale spillested er et kulturelt samlingspunkt, hvor du kan opleve autentiske musikoplevelser i en atmosfære, der hylder diversitet, rummelighed og accept. Radar er et åbent rum, hvor både kunstnere og publikum kan være sig selv og dele deres kærlighed til musikken</p>
+    <p>Hos Radar brænder vi for at støtte artister, som eksperimenter med musikken og forskellige nichegenre. Vores lokale spillested er et kulturelt samlingspunkt, hvor du kan opleve autentiske musikoplevelser i en atmosfære, der hylder diversitet, rummelighed og accept. Radar er et åbent rum, hvor både upcoming artister og publikum kan være sig selv og dele deres kærlighed til musikken.</p>
         <img src="img/billede2.webp" alt="billede">
     </section>
    
@@ -94,7 +94,7 @@
 
     <h2 id="instaskrift">Følg med på Instagram og deltag i vores konkurrencer</h2>
     <section class="instagram">  
-        <p id="instatekst">Vi afslører løbende artister, kommende events samt diverse konkurrencer på vores Instagram. Hvis du ønsker at holde dig opdateret eller vinde billetter og gratis drikkevare, så besøg Radar via billedet nedenfor, og bliv en del af vores community allerede i dag!</p>    
+        <p id="instatekst">Vi afslører løbende artister, kommende events samt diverse konkurrencer på vores Instagram. Hvis du ønsker at holde dig opdateret eller vinde billetter og gratis drikkevarer, så besøg Radar via billedet nedenfor, og bliv en del af vores community allerede i dag!</p>    
       
         <a href="https://www.instagram.com/radarlive/?hl=da">
         <img src="program/instagram.png" alt="instagramopslag">
