--- a/program.html
+++ b/program.html
@@ -60,8 +60,8 @@
 </header>
    <main>
     <h1>Kommende events</h1>
-    <p>Radar er stedet, hvor du kan opleve en atmosfære af diversitet og rummelighed samtidig med, at vi støtter artister, der tør at eksperimenterer med musikken. Vi arbejder løbende på at skabe et program, der byder på nichegenrer, up coming kunstnere, og koncerter – alt sammen i en autentisk og personlig atmosfære. Her får du en chance for at opdage nye universer og opleve autentiske musikoplevelser på et lokalt spillested, der brænder for at bringe musikken tættere på publikum. </p>
-        <p>Hold dig opdateret her og på vores Instagram, hvor vi løbende afslører kommende events og spændende konkurrencer - måske er det dig, der vinder billetter til Radar!
+    <p>Radar som kulturbærende institution er et sted, hvor atmosfæren rummer af ambitioner, dedikation og rummelighed. Vi tør at gå forrest, hvor vi støtter vores artisters dedikation til at eksperimentere med musikken. Vi knokler for at skabe et program, der byder på koncerter og events spækket med up coming artister og nichegenre - alt sammen i en autentisk og mangfoldig atmosfære. Nedenfor kan du opdage vores kommende koncerter med de sejeste artister, som tør at stå ved deres arbejde! </p>
+        <p>Hold dig opdateret på vores hjemmeside og på vores Instagram, hvor vi løbende afslører kommende koncerter og ikke mindst spændende konkurrencer - måske er det dig, der vinder? Du finder vores Instagram <a href="https://www.instagram.com/radarlive/?hl=da" id="her">her</a>
         </p>
    
 
