--- a/ungskab.html
+++ b/ungskab.html
@@ -83,10 +83,7 @@
     </section>
 
        <h5>Hvem er UNG-SKAB?</h5>
-        <h6>Med optrædener på SPOT Festival, åbningen af NorthSide 2024 og en udsolgt Store Vega, er det med stor stolthed, at vi til april præsenterer UNG-SKAB. Duoen er i rivende udvikling og har allerede opnået 21.000 månedlige lyttere på Spotify – så skynd dig at sikre dine billetter, inden det er for sent!
-            På vores intime, lokale spillested ønsker vi at give publikum en oplevelse, hvor autenticitet og dedikation smelter sammen. Med UNG-SKAB vil du mærke musikken gribe dig, følelserne løbe frit, og kærligheden til kunsten slå gnister. De er et stærkt spejl for den unge generation, der gennem deres musik udtrykker følelser med sårbarhed og ægthed.
-            </h6><h6>Duoen består af Clara Rose Lundberg og Eigil Bjørn Meldgaard, der med deres vidt forskellige talenter skaber musik, der både føles nutidig og anderledes. Sammen leverer de en oplevelse, du sent vil glemme.
-            Vi glæder os til at byde dig velkommen til UNG-SKAB - og vi lover, at det bliver en aften fyldt med musikalsk magi!</h6>
+        <h6>Med optrædener på SPOT Festival, åbningen af NorthSide 2024 og en udsolgt Store Vega, er det med stor stolthed, at vi til april præsenterer UNG-SKAB. Duoen er i rivende udvikling og har allerede opnået 21.000 månedlige lyttere på Spotify – så skynd dig at sikre dine billetter, inden det er for sent! På vores kulturelle og lokale spillested ønsker vi at give publikum en oplevelse, hvor autenticitet og dedikation går hånd i hånd. Med UNG-SKAB lover vi dig en aften fyldt med musikalske oplevelser, som uden tvivl vil sætte sig i dig. UNG-SKAB formår at skabe et sårbart og ærligt rum, hvor de hylder ægtheden og diversitet. </h6><h6>Duoen består af Clara Rose Lundberg og Eigil Bjørn Meldgaard, der med deres meget forskellige talenter skaber musik, der både føles nutidig, anderledes og ærligt. Vi glæder os til at byde dig velkommen til UNG-SKAB - en oplevelse du sent vil glemme!</h6>
        
        
             <figure class="ungskab-ns">
