--- a/kalender.html
+++ b/kalender.html
@@ -60,9 +60,9 @@
 </header>
    <main>
     <h1>Kalender 2025</h1>
-    <p>Forårets program på Radar 2025 er endelig klar! Vi har skabt et line-up, der hylder nichegenrer og artister, som virkelig brænder for musikken, men ikke mindst at give dig én på opleveren. Det bliver en sæson fyldt med autenticitet og dedikation – vi glæder os til at dele det med dig!</p>
-    <p>Efterårets program er stadig under udarbejdelse, og vi vil i den forbindelse gerne høre din mening. Har du en upcoming artist, som du tænker passer perfekt ind hos Radar? Klik her og vær med til at forme Radars fremtidige line-up.</p> 
-        <p>Husk at følge os på Instagram, hvor vi løbende afslører resten af programmet – og måske giver dig chancen for at vinde billetter til kommende koncerter.</p>
+    <p>Radars program for foråret 2025 er endelig landet! Vores store ambitioner har skabt et line-up, som hylder up coming artister samt nichegenre, der skaber en fantastisk og anderledes musikalsk oplevelse. Det bliver et foråret som er spræng fyldt med dedikation, autencitet og ikke mindst rummelighed - vi glæder os til at dele oplevelsen med dig!</p>
+    <p>Efterårets program er fortsat under udarbejdelse, hvilket er en perfekt anledning til at høre din mening. Så har du eller kender du en up coming artist, som du ønsker at se shine hos Radar? <a href="oensk.html">Klik her</a> og vær med til at forme Radars line-up for efteråret.</p> 
+        <p>Husk at følge os på <a href="https://www.instagram.com/radarlive?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">Instagram</a>, hvor vi løbende afslører resten af programmet – og måske giver dig chancen for at vinde billetter til kommende koncerter.</p>
         
    
 
