--- a/oensk.html
+++ b/oensk.html
@@ -60,15 +60,14 @@
 </header>
    <main>
     <h1>Ønsk en kunstner</h1>
-    <p>Hos Radar brænder vi for at give dig unikke koncertoplevelser, og nu har du chancen for at have indflydelse på, hvem der spiller på Radar! </p>
+    <p>Hos Radar lever og ånder vi for, at vores lokale spillested giver dig unikke koncertoplevelser, og nu har du chancen have indflydelse på, hvem der skal være fremtidig artist hos Radar! </p>
         
-        <p>Kender du en upcoming artist, der fortjener spotlightet på vores lokalt kulturelle spillested i vores autentiske atmosfære? Vi brænder for at høre din mening og udvide vores horisont af eksperimenternde artister. Det kan være, at det netop er dit ønske, som går i opfyldelse!
-        Længere nede på siden kan du sende os dit ønske! Sammen skaber vi Radar. </p>
+        <p>Så har du kendskab til en upcoming artist, der fortjener spotlightet i vores autentiske og mangfoldige atmosfære? Vi brænder for at høre din mening, så du kan tage dine venner under armen og opleve hvad det vil sige når musik og værdier går hånd i hånd. Længere nede på denne side kan du sende dit ønske afsted. Sammen skaber vi Radar.  </p>
        
    
     <h2>Tidligere kunstnere</h2>
-    <p>Du kender helt sikkert The Minds of 99, Jada, Barselona og andre store danske artister. Vidste du, at disse kunstnere har haft deres spæde start på Radar? Gennem årtier har vi været med til at skabe en oplevelse for artister, fordi vi vælger at tro på, at deres eksperimenterende måde til musikken er vejen fremad. </p>
-        <p>I dag har de slået igennem musikbranchen, netop fordi de valgte at tro på dem selv, og det er vi hos Radar meget stolte af, at være en del af denne rejse. Og hvem ved, måske er du netop med til at vælge den næste store revolution i dansk musik? </p>
+    <p>Du kender helt sikkert The Minds of 99, Jada, Barselona og andre store danske artister. Vidste du, at disse kunstnere har haft deres spæde start hos Radar? Gennem årtier har vi været med til at skabe en unik oplevelse for artisterne, fordi vi vælger at tro på, at deres eksperimenterende måde til musikken og deres største dedikation er vejen fremad. </p>
+        <p>I dag har de slået igennem musikbranchen og hos Radar er vi meget stolte af, at være en del af denne rejse. Og hvem ved, måske er du med til at vælge den næste store revolution i dansk musik? </p>
    
     <section class="tidligere">
        <img src="tidligere/minds.webp" alt="mindsof99">
