--- a/info.html
+++ b/info.html
@@ -60,7 +60,7 @@
 </header>
    <main>
     <h1>Praktisk information</h1>
-    <p>På denne side finder du al den praktiske information og svar på de mest stillede spørgsmål. Klik på ikonerne nedenfor for at finde de oplysninger, du behøver</p>
+    <p>På denne side finder du alt praktiske information samt svar på ofte stillede spørgsmål. Klik på et af ikonerne nedenfor og find svar på dine spørgsmål.</p>
    
 
     <section class="ikoner">
