ændringer af css

--- a/del.html
+++ b/del.html
@@ -60,8 +60,8 @@
 </header>
    <main>
   
-    <h1>Del dine minder og vind gratis drikkevare</h1>
-    <p>På vores Instagram kører vi løbende konkurrencer, hvor man kan vinde billetter, drikkevare og meget andet! Hver gang Radar afholder en koncert eller event, har du mulighed for at vinde 2xvalgfrie drikkevare!</p>
+    <h1>Del dine minder og vind gratis drikkevarer</h1>
+    <p>På vores Instagram kører vi løbende konkurrencer, hvor man kan vinde billetter, drikkevarer og meget andet! Hver gang Radar afholder en koncert eller event, har du mulighed for at vinde 2xvalgfrie drikkevarer!</p>
     <section class="story">
         <img src="stoet/story.webp" alt="story1">
         <img src="stoet/story2.webp" alt="story2">
@@ -76,11 +76,11 @@
        <ol>
         <li id="et">1. Deltag til en koncert eller et event hos Radar</li>
         <li id="to">2. Læg et billede fra din aften op på din Instagram-historie, hvor du tagger @radarlive </li>
-        <li id="tre">3. Du vil herefter modtage en besked i din indbakke i den kommende uge, hvis du er en af de heldige vindere af 2xvalgfrie drikkevare</li>
+        <li id="tre">3. Du vil herefter modtage en besked i din indbakke i den kommende uge, hvis du er en af de heldige vindere af 2xvalgfrie drikkevarer</li>
        </ol>
     </section>
 
-    <h2>Vil du se hvilke lækre drikkevare du kan vinde? Tag et kig på vores menukort her:</h2>
+    <h2>Vil du se hvilke lækre drikkevarer du kan vinde? Tag et kig på vores barkort her:</h2>
   
      <article class="konkurrence">
     <img src="info/barkort.png" alt="barkort">  
