--- a/vindbillet.html
+++ b/vindbillet.html
@@ -61,6 +61,7 @@
    <main>
   
     <h1>Vind billetter til UNG-SKAB</h1>
+    <h4>Hos Radar elsker vi at forkæle vores trofaste følgere. Lige nu har vi en konkurrence kørende på vores Instagram, hvor du har mulighed for at vinde billetter til ingen mindre end duoen UNG-SKAB. Hop ind på vores Instagram ved at klikke på billedet, hvor du kan læse om, hvordan du deltager!</h4>
    
     <section class="ungskab">
        
@@ -84,7 +85,7 @@
     </section>
 
 
-    <h4>Del dine minder fra Radar! Gør som vores andre gæster, læg en story på på Instagram, tag @radarlive og måske er DU den heldige, som modtager 2 valgfrie drinks, som du kan indløse næste gang du besøger Radar! Læs mere på vores instagram eller klik <a href="del.html">her</a></h4>
+    <h4>Del dine minder fra Radar! Gør som vores andre gæster, læg en story på Instagram, tag @radarlive og måske er DU den heldige, som modtager 2 valgfrie drinks, som du kan indløse næste gang du besøger Radar! Læs mere på vores instagram eller klik <a href="del.html">her</a></h4>
     <section class="story">
         <img src="stoet/story.webp" alt="story1">
         <img src="stoet/story2.webp" alt="story2">
