--- a/stot.html
+++ b/stot.html
@@ -61,7 +61,7 @@
    <main>
     <section class="infog">
     <h1>Støt Radar</h1>
-    <p>Radar er mere end bare et spillested – det er et kulturelt fællesskab, der støtter både upcoming kunstnere og den lokale musikscene. Ved at støtte os bidrager du til at skabe en platform for autentisk musik og unikke oplevelser. Din støtte gør det muligt for os at fortsætte med at tilbyde spændende koncerter, events og et sted, hvor musikken virkelig kan leve. Støt Radar i dag og vær med til at forme fremtidens musikscene!</p>
+    <p>Vi har store ambitioner for Radar, men derfor har vi brug for din hjælp. Hvis Radar skal fortsætte som den kulturbærende institution i mange år endnu bliver vi nødt til at række ud. Det behøves ikke at koste en krone eller være tidskrævende, for hver en form for støtte tæller. Du kan ved at klikke på et af emnerne nedenfor læse, hvordan du kan støtte Radar. Tusind tak for dig. </p>
    
 
     <section class="infographic">
@@ -73,7 +73,7 @@
         <input type="checkbox" id="tryk1" hidden>
         <label for="tryk1" class="open">Følg os på Instagram</label>
         <section class="popup">
-            <p>Når du følger Radar på Instagram, er du med til at støtte vores fremtid. Din opbakning hjælper os med at nå ud til et større publikum og give upcoming kunstnere den synlighed, de fortjener. Ved at følge os, engagerer du dig i et fællesskab, der er med til at bevare Radar som et kulturelt samlingspunkt i Aarhus, hvor musikken kan blomstre. Tak for at være en del af Radars rejse og hjælpe os med at fortsætte vores arbejde for autentiske musikoplevelser!</p>
+            <p>Når du følger Radar på Instagram, er du med til at støtte vores fremtid. Din opbakning hjælper os med at nå ud til et større publikum og give upcoming kunstnere den synlighed, de fortjener. Ved at følge os, engagerer du dig i et fællesskab, der er med til at bevare Radar som et kulturelt samlingspunkt i Aarhus, hvor musikken kan blomstre. Tak for at være en del af Radars rejse og hjælpe os med at fortsætte vores arbejde for unikke musikoplevelser i Aarhus! Du finder vores Instagram i bunden af denne side.</p>
             <label for="tryk1" class="close">Luk</label>
             <input type="checkbox" id="close1" hidden>
             </section>
@@ -83,7 +83,7 @@
             <input type="checkbox" id="tryk2" hidden>
         <label for="tryk2" class="open">Bliv frivillig</label>
         <section class="popup">
-            <p>Som frivillig hos Radar får du ikke kun mulighed for at være tæt på musikken, du er også med til at skabe den unikke atmosfære, vi er kendt for. Din hjælp gør det muligt for os at fortsætte med at tilbyde unikke koncerter og støtte upcoming artister. Ved at blive frivillig bidrager du direkte til at holde Radar levende og tilgængelig for både artister og publikum – og samtidig får du en uforglemmelig oplevelse!</p>
+            <p>Vores frivillige er vores vigtigste hænder. Ingen frivillige, ingen Radar. Som frivillig har du mange muligheder! Så om du ønsker at hjælpe vores artister, styre lysshowet eller stå bagved baren ville vi elske at få dig på vores hold. Skriv til os på kontakt@radarlive.dk</p>
             <label for="tryk2" class="close">Luk</label>
             <input type="checkbox" id="close2" hidden>
             </section>
@@ -92,7 +92,7 @@
             <input type="checkbox" id="tryk3" hidden>
         <label for="tryk3" class="open">Donér</label>
         <section class="popup">
-            <p>Radar står overfor udfordringer i den nuværende økonomiske situation, og vi har brug for din støtte for at kunne fortsætte med at tilbyde autentiske musikoplevelser og støtte upcoming kunstnere. Din donation gør en stor forskel og hjælper os med at bevare Radar som et kulturelt samlingspunkt i Aarhus. Støt os i dag og vær med til at sikre, at musikken kan leve videre på Radar!</p>
+            <p>Radar står overfor udfordringer i den nuværende økonomiske situation, og vi har brug for din støtte for at kunne fortsætte vores elskede lokale spillested. Din donation gør en stor forskel og hjælper os med at bevare Radar som et kulturelt samlingspunkt i Aarhus. Du kan donere et valgfrit beløb på 86760344 - hvert beløb tæller. </p>
             <label for="tryk3" class="close">Luk</label>
             <input type="checkbox" id="close3" hidden>
             </section>
@@ -101,7 +101,7 @@
             <input type="checkbox" id="tryk4" hidden>
             <label for="tryk4" class="open">Køb billet</label>
             <section class="popup">
-                <p>Når du køber en billet til en koncert på Radar, er du med til at støtte vores fremtid. Billetkøbet giver os mulighed for at fortsætte med at tilbyde en platform for upcoming kunstnere og skabe unikke musikoplevelser. Din støtte hjælper os med at bevare Radar som et kulturelt samlingspunkt, hvor musikken kan blomstre og fremtidens talenter kan få deres scene. Tak for at være en del af Radars rejse!</p>
+                <p>En af de vigtigste måder man kan støtte os på er ved at deltage til vores koncerter og events. Opbakningen og den atmosfære publikum skaber gør en kæmpe forskel for vores artister, personale og frivillige. Du kan købe en billet og støtte Radar <a href="billet.html">her</a></p>
                 <label for="tryk4" class="close">Luk</label>
                 <input type="checkbox" id="close4" hidden>
                 </section>
